--- a/index.html
+++ b/index.html
@@ -66,17 +66,18 @@
     </nav>
   </header>
 
-  <!-- Hero -->
-  <section class="text-center py-24 px-6 bg-glass">
-    <h1 class="text-5xl sm:text-6xl md:text-7xl font-bold tracking-wide glow">Step Up</h1>
-    <p class="mt-4 text-lg text-gray-300 max-w-xl mx-auto">
-      Crew chilena de Drum & Bass que impulsa la cultura rave con sonido futurista y beats rotos.
-    </p>
-    <div class="mt-8 flex justify-center gap-4">
-      <a href="#events" class="btn btn-primary">Próximos Eventos</a>
-      <a href="#contact" class="btn btn-outline">Contacto</a>
-    </div>
-  </section>
+<!-- Hero -->
+<section class="text-center py-24 px-6 bg-glass">
+  <img src="Logo.png" alt="Step Up Logo" class="mx-auto w-72 sm:w-80 md:w-96 mb-6" />
+  <p class="mt-4 text-lg text-gray-300 max-w-xl mx-auto">
+    Crew chilena de Drum & Bass que impulsa la cultura rave con sonido futurista y beats rotos.
+  </p>
+  <div class="mt-8 flex justify-center gap-4">
+    <a href="#events" class="btn btn-primary">Próximos Eventos</a>
+    <a href="#contact" class="btn btn-outline">Contacto</a>
+  </div>
+</section>
+
 
   <!-- Artists -->
   <section id="artists" class="py-20 px-6 bg-glass">
