--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
   <header class="w-full px-6 py-4 border-b border-white/10 sticky top-0 z-50 bg-glass flex justify-between items-center">
     <img src="Logo.png" alt="Step Up Logo" class="h-10" />
     <nav class="flex gap-4 text-sm font-semibold uppercase">
-      <a href="#artists" class="hover:text-gray-400">Artists</a>
-      <a href="#events" class="hover:text-gray-400">Events</a>
-      <a href="#podcasts" class="hover:text-gray-400">Podcasts</a>
-      <a href="#gallery" class="hover:text-gray-400">Gallery</a>
-      <a href="#contact" class="hover:text-gray-400">Contacto</a>
+      <a href="#artists" class="hover:text-gray-400">ARTISTS</a>
+      <a href="#events" class="hover:text-gray-400">EVENTS</a>
+      <a href="#podcasts" class="hover:text-gray-400">PODCATS</a>
+      <a href="#gallery" class="hover:text-gray-400">GALLERY</a>
+      <a href="#contact" class="hover:text-gray-400">CONTACTO</a>
     </nav>
   </header>
 
