--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- Artists -->
   <section id="artists" class="py-20 px-6 bg-glass">
-    <h2 class="text-4xl font-bold mb-12 text-center glow">Artists</h2>
+    <h2 class="text-4xl font-bold mb-12 text-center glow">ARTISTS</h2>
     <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
         <img src="Junglesoul.png" alt="Junglesoul" class="w-full h-64 object-cover mb-4 rounded-md" />
@@ -99,7 +99,7 @@
 
   <!-- Events -->
   <section id="events" class="py-20 px-6 bg-glass">
-    <h2 class="text-4xl font-bold mb-12 text-center glow">Events</h2>
+    <h2 class="text-4xl font-bold mb-12 text-center glow">EVENTS</h2>
     <div class="max-w-4xl mx-auto space-y-6">
       <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
         <h3 class="text-xl font-bold text-white mb-1">Step Up Launch Rave</h3>
@@ -116,7 +116,7 @@
 
   <!-- Podcasts -->
   <section id="podcasts" class="py-20 px-6 bg-glass">
-    <h2 class="text-4xl font-bold mb-12 text-center glow">Podcasts</h2>
+    <h2 class="text-4xl font-bold mb-12 text-center glow">PODCASTS</h2>
     <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
       <div class="bg-white/5 p-4 rounded-lg">
         <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-at-organika-sessions-ft-cerveza-lunatica-08112024%2F" frameborder="0" allow="autoplay"></iframe>
@@ -134,7 +134,7 @@
 
   <!-- Gallery -->
   <section id="gallery" class="py-20 px-6 bg-glass">
-    <h2 class="text-4xl font-bold mb-12 text-center glow">Gallery</h2>
+    <h2 class="text-4xl font-bold mb-12 text-center glow">GALLERY</h2>
     <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6 max-w-6xl mx-auto">
       <img src="1 image gallery.png" class="rounded-lg hover:scale-105 transition" alt="Galería 1" />
       <img src="2 image gallery.png" class="rounded-lg hover:scale-105 transition" alt="Galería 2" />
@@ -144,7 +144,7 @@
 
   <!-- Contact -->
   <section id="contact" class="py-20 px-6 bg-glass">
-    <h2 class="text-4xl font-bold mb-12 text-center glow">Contacto</h2>
+    <h2 class="text-4xl font-bold mb-12 text-center glow">CONTACTO</h2>
     <form action="https://formsubmit.co/organikasessions@gmail.com" method="POST" class="max-w-2xl mx-auto space-y-4">
       <input type="hidden" name="_captcha" value="false" />
       <input type="hidden" name="_next" value="https://organikasessions.com/gracias_newsletter.html" />
