--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <p class="text-sm text-gray-300">Selector de Drum & Bass con enfoque tribal, ambient y basslines profundos.</p>
       </div>
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Cherry.png" alt="Cherry" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <img src="Drumblack_image.png" alt="Drumblack" class="w-full h-64 object-cover mb-4 rounded-md" />
         <h3 class="text-xl font-semibold">Cherry</h3>
-        <p class="text-sm text-gray-300">DJ con influencias de minimal techno y sonidos industriales.</p>
+        <p class="text-sm text-gray-300">DJ Drumblack, activo desde 2003, es referente del Drum and Bass chileno. Con técnica en vinilo, mezcla soulful, rolling y deep.</p>
       </div>
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
         <img src="LilJahn.png" alt="Lil Jahn" class="w-full h-64 object-cover mb-4 rounded-md" />
