--- a/index.html
+++ b/index.html
@@ -80,19 +80,26 @@
     <h2 class="text-4xl font-bold mb-12 text-center glow">ARTISTS</h2>
     <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Junglesoul.png" alt="Junglesoul" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <img src="Junglesoul_image.png" alt="Junglesoul" class="w-full h-64 object-cover mb-4 rounded-md" />
         <h3 class="text-xl font-semibold">Junglesoul</h3>
-        <p class="text-sm text-gray-300">Selector de Drum & Bass con enfoque tribal, ambient y basslines profundos.</p>
+        <p class="text-sm text-gray-300">Junglesoul, DJ y productor chileno con 17 años de trayectoria, impulsa la escena Drum & Bass desde Step Up, Organika Sessions y Shidzen Music. Mezcla Jungle, Footwork, Dubstep, pero por sobre todo Drum and Bass.</p>
       </div>
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
         <img src="Drumblack_image.png" alt="Drumblack" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Cherry</h3>
+        <h3 class="text-xl font-semibold">Drumblack</h3>
         <p class="text-sm text-gray-300">DJ Drumblack, activo desde 2003, es referente del Drum and Bass chileno. Con técnica en vinilo, mezcla soulful, rolling y deep.</p>
       </div>
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="LilJahn.png" alt="Lil Jahn" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Lil Jahn</h3>
-        <p class="text-sm text-gray-300">Productor futurista entre jungle, neurofunk y beats experimentales.</p>
+        <img src="Frantik_image.png" alt="Frantik" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <h3 class="text-xl font-semibold">Frantik</h3>
+        <p class="text-sm text-gray-300">Frantik inicia en 1999 en la escena Drum & Bass de Barcelona. Productor y DJ, hoy difunde el sonido desde Junglist.cl y sellos globales, con raíces en Tiknology y Shidzen Music.</p>
+      </div>
+      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
+        <img src="Cherry_image.png" alt="Cherry" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <h3 class="text-xl font-semibold">Cherry</h3>
+        <p class="text-sm text-gray-300">Cherry, DJ peruana de Cusco radicada en Chile desde 2019, destaca por su energía y técnica. Fusiona Drum & Bass y Tech con un enfoque futurista que rompe la pista en cada sesión.
+
+</p>
       </div>
     </div>
   </section>
