--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
     <h2 class="text-4xl font-bold mb-12 text-center glow">PODCASTS</h2>
     <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
       <div class="bg-white/5 p-4 rounded-lg">
-        <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-at-organika-sessions-ft-cerveza-lunatica-08112024%2F" frameborder="0" allow="autoplay"></iframe>
+        <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-2-hosted-by-junglesoul-junglist-sudaka-radio-31102024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;" ></iframe>
         <p class="mt-2 text-sm text-gray-300">DJ Junglesoul en vivo desde Cerveza Lunática</p>
       </div>
       <div class="bg-white/5 p-4 rounded-lg">
-        <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Flil-jahn-live-at-organika-sessions-xl-22feb25%2F" frameborder="0" allow="autoplay"></iframe>
+        <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-4-junglist-sudaka-radio-26122024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;" ></iframe>
         <p class="mt-2 text-sm text-gray-300">Lil Jahn con un set experimental desde XL Sessions</p>
       </div>
     </div>
