--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
     <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
       <div class="bg-white/5 p-4 rounded-lg">
         <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-2-hosted-by-junglesoul-junglist-sudaka-radio-31102024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;" ></iframe>
-        <p class="mt-2 text-sm text-gray-300">DJ Junglesoul en vivo desde Cerveza Lunática</p>
+        <p class="mt-2 text-sm text-gray-300">DJ Junglesoul, sesión para Junglist Sudaka Radio. Deep down into the Rufige movement.</p>
       </div>
       <div class="bg-white/5 p-4 rounded-lg">
         <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-4-junglist-sudaka-radio-26122024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;" ></iframe>
-        <p class="mt-2 text-sm text-gray-300">Lil Jahn con un set experimental desde XL Sessions</p>
+        <p class="mt-2 text-sm text-gray-300">Dj Junglesoul, Step Up Podcast 4 Jungle.</p>
       </div>
     </div>
     <div class="text-center mt-8">
