--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       backdrop-filter: blur(0,5px);
     }
   </style>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
 </head>
 <body class="min-h-screen flex flex-col">
 
