New Podcast block v2

--- a/index.html
+++ b/index.html
@@ -123,20 +123,20 @@
     </div>
   </section>
 
-  <!-- Podcasts -->
+<!-- Podcasts -->
 <section id="podcasts" class="py-20 px-6 bg-glass">
   <h2 class="text-4xl font-bold mb-12 text-center glow">PODCASTS</h2>
 
   <!-- It’s a Junglist World Podcast -->
   <h3 class="text-2xl font-semibold mb-6 text-center text-white">It’s a Junglist World Podcast</h3>
-  <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto mb-8">
+  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto mb-8">
     <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-10-bassassin-col%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
     <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-9-swara-esp%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
-    <div class="bg-white/5 p-4 rounded-lg md:col-span-2">
+    <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-8-bianka-fr%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
   </div>
@@ -146,14 +146,14 @@
 
   <!-- Step Up Podcast on Junglist Sudaka Radio -->
   <h3 class="text-2xl font-semibold mb-6 text-center text-white">Step Up Podcast on Junglist Sudaka Radio</h3>
-  <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto mb-8">
+  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto mb-8">
     <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-hosted-by-junglesoul-junglist-sudaka-radio-09262024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
     <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-2-hosted-by-junglesoul-junglist-sudaka-radio-31102024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
-    <div class="bg-white/5 p-4 rounded-lg md:col-span-2">
+    <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-aniversario-cerveza-puesco-01192025%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
   </div>
@@ -163,14 +163,14 @@
 
   <!-- Other Mixes -->
   <h3 class="text-2xl font-semibold mb-6 text-center text-white">Other Mixes</h3>
-  <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto mb-8">
+  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto mb-8">
     <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-puesco-fest-feat-vientos-hifi-chakana-soundsystem-22nov2024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
     <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-vinyl-set-for-caolythic-funding-event-at-paxbass-tv%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
-    <div class="bg-white/5 p-4 rounded-lg md:col-span-2">
+    <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fjunglist-cl-drumblack-b2b-junglesoul-b2b-frantik-vinyl-set-live-17102021%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
   </div>
@@ -178,7 +178,6 @@
     <a href="podcasts.html#otros" class="btn btn-outline">Escuchar más</a>
   </div>
 </section>
-
 
   <!-- Gallery -->
   <section id="gallery" class="py-20 px-6 bg-glass">
