New Podcast block v3

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
   </div>
   <div class="text-center mb-16">
-    <a href="podcasts.html#junglist-world" class="btn btn-outline">Escuchar más</a>
+    <a href="podcasts_page.html#junglist-world" class="btn btn-outline">Escuchar más</a>
   </div>
 
   <!-- Step Up Podcast on Junglist Sudaka Radio -->
@@ -158,7 +158,7 @@
     </div>
   </div>
   <div class="text-center mb-16">
-    <a href="podcasts.html#step-up" class="btn btn-outline">Escuchar más</a>
+    <a href="podcasts_page.html#step-up" class="btn btn-outline">Escuchar más</a>
   </div>
 
   <!-- Other Mixes -->
@@ -175,7 +175,7 @@
     </div>
   </div>
   <div class="text-center">
-    <a href="podcasts.html#otros" class="btn btn-outline">Escuchar más</a>
+    <a href="podcasts_page.html#otros" class="btn btn-outline">Escuchar más</a>
   </div>
 </section>
 
