--- a/podcasts_page.html
+++ b/podcasts_page.html
@@ -22,7 +22,7 @@
     body {
       font-family: 'Montserrat', sans-serif;
       color: var(--primary);
-      background: url('Step%20up%20the%20rave%20(Website).png') no-repeat center center fixed;
+      background: url('background.png') no-repeat center center fixed;
       background-size: cover;
     }
 
