--- a/podcasts_page.html
+++ b/podcasts_page.html
@@ -47,6 +47,7 @@
       backdrop-filter: blur(0.5px);
     }
   </style>
+   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body class="min-h-screen flex flex-col">
 
