--- a/podcasts_page.html
+++ b/podcasts_page.html
@@ -80,6 +80,14 @@
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-10-bassassin-col%2F" frameborder="0"></iframe>
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-9-swara-esp%2F" frameborder="0"></iframe>
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-8-bianka-fr%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-7-dj-junglesoul-cl%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-6-calculon-arietta-usa%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-5-north-base-uk%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-4-bscience-cl%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-3-acuna-br%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-2-dunk-br-live-step-up-26032022%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-1-bad-boy-orange-ar%2F" frameborder="0"></iframe>
+
         <!-- ... add more -->
       </div>
 
@@ -88,6 +96,7 @@
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-hosted-by-junglesoul-junglist-sudaka-radio-09262024%2F" frameborder="0"></iframe>
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-2-hosted-by-junglesoul-junglist-sudaka-radio-31102024%2F" frameborder="0"></iframe>
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-aniversario-cerveza-puesco-01192025%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-4-junglist-sudaka-radio-26122024%2F" frameborder="0"></iframe>
       </div>
 
       <h2 id="otros" class="text-3xl font-bold mb-8 glow">Other Mixes</h2>
@@ -95,6 +104,9 @@
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-puesco-fest-feat-vientos-hifi-chakana-soundsystem-22nov2024%2F" frameborder="0"></iframe>
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-vinyl-set-for-caolythic-funding-event-at-paxbass-tv%2F" frameborder="0"></iframe>
         <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fjunglist-cl-drumblack-b2b-junglesoul-b2b-frantik-vinyl-set-live-17102021%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstreaming-series-7-finger-low-syndicate-esp%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-from-liquid-nights-8-dic-2021%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstreaming-series-10-dj-robimess%2F" frameborder="0"></iframe>
       </div>
     </div>
   </section>
