--- a/podcasts_page.html
+++ b/podcasts_page.html
@@ -53,7 +53,9 @@
 
   <!-- Header -->
   <header class="w-full px-6 py-4 border-b border-white/10 sticky top-0 z-50 bg-glass flex justify-between items-center">
-    <img src="Logo.png" alt="Step Up Logo" class="h-10" />
+    <a href="index.html">
+      <img src="Logo.png" alt="Step Up Logo" class="h-10" />
+    </a>
     <nav class="flex gap-4 text-sm font-semibold uppercase">
       <a href="index.html#artists" class="hover:text-gray-400">Artists</a>
       <a href="index.html#events" class="hover:text-gray-400">Events</a>
