--- a/podcasts_page.html
+++ b/podcasts_page.html
@@ -3,73 +3,125 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Podcasts - Organika Sessions</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet" />
-  <link rel="icon" href="favicon.ico" />
+  <title>PODCASTS – Step Up</title>
+
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/a2e8f6a12e.js" crossorigin="anonymous"></script>
+
   <style>
+    :root {
+      --primary: #ffffff;
+      --accent: #0ff;
+      --bg-dark: #000000;
+    }
+
     body {
       font-family: 'Montserrat', sans-serif;
-      background: url('organika_background.png') no-repeat center center fixed;
+      color: var(--primary);
+      background: url('background.png') no-repeat center center fixed;
       background-size: cover;
-      color: #f5f5f5;
     }
-    .bg-custom-dark { background-color: #0a0a0a; }
-    .text-custom-purple { color: #8f78a8; }
-    .text-custom-teal { color: #2aa99d; }
+
+    h1, h2, h3, h4 {
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    .glow {
+      text-shadow: 0 0 10px var(--accent);
+    }
+
+    .btn {
+      @apply uppercase font-bold py-2 px-6 rounded-full transition;
+    }
+
+    .btn-outline {
+      @apply border border-white hover:bg-white hover:text-black;
+    }
+
+    .bg-glass {
+      background-color: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(0.5px);
+    }
   </style>
+   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
-<body>
+<body class="min-h-screen flex flex-col">
+
   <!-- Header -->
-  <header class="bg-custom-dark py-4 px-6">
-    <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-3xl font-bold">
-        <a href="index.html">
-          <span class="text-custom-purple">organika</span><span class="text-white">sessions</span>
-        </a>
-      </h1>
-      <nav class="space-x-4 text-sm">
-        <a href="index.html#sobre" class="text-gray-300 hover:text-white">Sobre</a>
-        <a href="index.html#nosotros" class="text-gray-300 hover:text-white">Nosotros</a>
-        <a href="index.html#events" class="text-gray-300 hover:text-white">Eventos</a>
-        <a href="index.html#gallery" class="text-gray-300 hover:text-white">Galería</a>
-        <a href="artistas.html" class="text-custom-teal hover:text-white font-semibold">Artistas</a>
-      </nav>
-    </div>
+  <header class="w-full px-6 py-4 border-b border-white/10 sticky top-0 z-50 bg-glass flex justify-between items-center">
+    <a href="index.html">
+      <img src="Logo.png" alt="Step Up Logo" class="h-10" />
+    </a>
+    <nav class="flex gap-4 text-sm font-semibold uppercase">
+      <a href="index.html#artists" class="hover:text-gray-400">Artists</a>
+      <a href="index.html#events" class="hover:text-gray-400">Events</a>
+      <a href="podcasts.html" class="hover:text-gray-400">Podcasts</a>
+      <a href="index.html#gallery" class="hover:text-gray-400">Gallery</a>
+      <a href="index.html#contact" class="hover:text-gray-400">Contacto</a>
+    </nav>
   </header>
 
-  <!-- Main Content -->
-  <main class="py-20 px-6">
-    <div class="container mx-auto max-w-5xl">
-      <h2 class="text-4xl font-bold text-center mb-12">
-        <span class="text-custom-purple">Nuestros</span> <span class="text-custom-teal">Podcasts</span>
-      </h2>
+  <!-- Hero -->
+  <section class="text-center py-20 px-6 bg-glass">
+    <h1 class="text-5xl font-bold tracking-wide glow">Todos los Podcasts</h1>
+    <p class="mt-4 text-lg text-gray-300 max-w-2xl mx-auto">
+      Explora las sesiones completas de nuestros podcasts y descubre lo mejor del Drum & Bass internacional.
+    </p>
+  </section>
 
-      <!-- Podcast Cards -->
-      <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-custom-dark p-6 rounded-lg shadow-lg">
-          <h3 class="text-xl font-semibold text-custom-teal mb-2">Organika Podcast 001 - DJ Naturalia</h3>
-          <p class="text-gray-400 mb-4">Deep & Organic House con sonidos naturales, grabado en vivo desde Puesco.</p>
-          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2Forganikasessions%2Fnaturalia-live-puesco%2F" frameborder="0" allow="autoplay"></iframe>
-        </div>
+  <!-- All Podcasts -->
+  <section class="py-16 px-6 bg-glass">
+    <div class="max-w-6xl mx-auto">
+      <h2 id="junglist-world" class="text-3xl font-bold mb-8 glow">It’s a Junglist World Podcast</h2>
+      <div class="grid md:grid-cols-3 gap-8 mb-16">
+        <!-- Add all 10 episodes here -->
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-10-bassassin-col%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-9-swara-esp%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-8-bianka-fr%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-7-dj-junglesoul-cl%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-6-calculon-arietta-usa%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-5-north-base-uk%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-4-bscience-cl%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-3-acuna-br%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-2-dunk-br-live-step-up-26032022%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fits-a-junglist-world-podcast-1-bad-boy-orange-ar%2F" frameborder="0"></iframe>
 
-        <div class="bg-custom-dark p-6 rounded-lg shadow-lg">
-          <h3 class="text-xl font-semibold text-custom-teal mb-2">Organika Podcast 002 - Terra Form</h3>
-          <p class="text-gray-400 mb-4">Un viaje de ritmos tribales con groove introspectivo.</p>
-          <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2Forganikasessions%2Fterra-form-mix%2F" frameborder="0" allow="autoplay"></iframe>
-        </div>
+        <!-- ... add more -->
+      </div>
 
-        <!-- Puedes seguir agregando más podcasts aquí -->
+      <h2 id="step-up" class="text-3xl font-bold mb-8 glow">Step Up Podcast on Junglist Sudaka Radio</h2>
+      <div class="grid md:grid-cols-3 gap-8 mb-16">
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-hosted-by-junglesoul-junglist-sudaka-radio-09262024%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-2-hosted-by-junglesoul-junglist-sudaka-radio-31102024%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-aniversario-cerveza-puesco-01192025%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-4-junglist-sudaka-radio-26122024%2F" frameborder="0"></iframe>
+      </div>
+
+      <h2 id="otros" class="text-3xl font-bold mb-8 glow">Other Mixes</h2>
+      <div class="grid md:grid-cols-3 gap-8">
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-puesco-fest-feat-vientos-hifi-chakana-soundsystem-22nov2024%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-vinyl-set-for-caolythic-funding-event-at-paxbass-tv%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fjunglist-cl-drumblack-b2b-junglesoul-b2b-frantik-vinyl-set-live-17102021%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstreaming-series-7-finger-low-syndicate-esp%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-from-liquid-nights-8-dic-2021%2F" frameborder="0"></iframe>
+        <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstreaming-series-10-dj-robimess%2F" frameborder="0"></iframe>
       </div>
     </div>
-  </main>
+  </section>
 
   <!-- Footer -->
-  <footer class="footer bg-custom-dark py-10 px-6 mt-20">
-    <div class="container mx-auto text-center text-sm text-gray-400">
-      &copy; 2025 Organika Sessions. Todos los derechos reservados.
+  <footer class="text-center py-10 mt-auto border-t border-white/10 text-gray-400 text-sm bg-glass">
+    <p>© 2025 Step Up Crew – Santiago de Chile · Drum & Bass Movement</p>
+    <div class="mt-4 flex justify-center gap-4 text-white text-lg">
+      <a href="#" class="hover:text-gray-400"><i class="fab fa-instagram"></i></a>
+      <a href="#" class="hover:text-gray-400"><i class="fab fa-soundcloud"></i></a>
+      <a href="#" class="hover:text-gray-400"><i class="fab fa-youtube"></i></a>
     </div>
   </footer>
+
 </body>
 </html>
