--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
         <img src="Cherry_image.png" alt="Cherry" class="w-full h-64 object-cover mb-4 rounded-md" />
         <h3 class="text-xl font-semibold">Cherry</h3>
-        <p class="text-sm text-gray-300">Cherry, DJ peruana de Cusco radicada en Chile desde 2019, destaca por su energía y técnica. Fusiona Drum & Bass y Tech con un enfoque futurista que rompe la pista en cada sesión.
-
-</p>
+        <p class="text-sm text-gray-300">Cherry, DJ peruana de Cusco radicada en Chile desde 2019, destaca por su energía y técnica. Fusiona Drum & Bass y Tech con un enfoque futurista que rompe la pista en cada sesión.</p>
       </div>
     </div>
   </section>
@@ -148,13 +146,13 @@
   <h3 class="text-2xl font-semibold mb-6 text-center text-white">Step Up Podcast on Junglist Sudaka Radio</h3>
   <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto mb-8">
     <div class="bg-white/5 p-4 rounded-lg">
-      <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-hosted-by-junglesoul-junglist-sudaka-radio-09262024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
+      <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-5-mixed-by-junglesoul%2F" frameborder="0"></iframe>
     </div>
     <div class="bg-white/5 p-4 rounded-lg">
       <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-2-hosted-by-junglesoul-junglist-sudaka-radio-31102024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
     </div>
     <div class="bg-white/5 p-4 rounded-lg">
-      <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fdj-junglesoul-live-aniversario-cerveza-puesco-01192025%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>
+      <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2FJunglistCL%2Fstep-up-podcast-hosted-by-junglesoul-junglist-sudaka-radio-09262024%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay;"></iframe>  
     </div>
   </div>
   <div class="text-center mb-16">
