--- a/index.html
+++ b/index.html
@@ -101,6 +101,31 @@
         <h3 class="text-xl font-semibold">Cherry</h3>
         <p class="text-sm text-gray-300">Cherry, DJ peruana de Cusco radicada en Chile desde 2019, destaca por su energía y técnica. Fusiona Drum & Bass y Tech con un enfoque futurista que rompe la pista en cada sesión.</p>
       </div>
+        <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
+        <img src="Robimess_image.png" alt="Robimess" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <h3 class="text-xl font-semibold">Robimess</h3>
+        <p class="text-sm text-gray-300">Maximo Gatica aka Robimess, chileno, 37 años. DJ de drum and bass desde 2004. Ha tocado con Thrasher, Blacksoul y más. Miembro de Switch Technique e Igneon System. Promotor de Prspct y fundador de KillerDrumz en Chile.</p>
+      </div>
+      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
+        <img src="BassBrain_image.png" alt="Bass Brain" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <h3 class="text-xl font-semibold">Bass Brain</h3>
+        <p class="text-sm text-gray-300">Claudio Vera aka Bass Brain DJ/productor chileno de Concepción. +18 años de experiencia. Especialista en Drum & Bass, Jungle y Neurofunk (170+ BPM). Fundador de HYBRID BASS y grandes raves en el sur de Chile</p>
+      </div>
+      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
+        <img src="Ortokore_image.png" alt="Ortokore" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <h3 class="text-xl font-semibold">Ortokore</h3>
+        <p class="text-sm text-gray-300">Oscar Cartagena aka Ortokore: DJ, producer, chileno venezolano, drummer y bajista con +20 años de experiencia. Actuó en grandes festivales y escenarios nacionales e internacionales.</p>
+      </div>
+      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
+        <img src="FatPablo_image.png" alt="Fat Pablo" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <h3 class="text-xl font-semibold">Fat Pablo</h3>
+        <p class="text-sm text-gray-300">Pablo Sepúlveda aka Fat Pablo, pionero del Jungle/DnB en Chile desde 1999. Tocó en Creamfields, Lollapalooza con Massive Attack, Dj Marky y más. Ganador premio PULSE 2008. Embajador @kayaunite, residente @casaconejo.cl y fundador de Caja de Ritmos Records</p>
+      </div>
+       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
+        <img src="Meltman_image.png" alt="Meltman" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <h3 class="text-xl font-semibold">Meltman</h3>
+        <p class="text-sm text-gray-300">Cristian Reyes aka Meltman, DJ chileno radicado en España, comienza desde 2017, fusiona deep, liquid y jungle en sus sets. Crea atmósferas únicas, mezclando sonidos alegres y oscuros en un viaje musical diverso y envolvente.</p>
+      </div>
     </div>
   </section>
 
