--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <p class="text-sm text-gray-300">Pablo Sepúlveda aka Fat Pablo, pionero del Jungle/DnB en Chile desde 1999. Tocó en Creamfields, Lollapalooza con Massive Attack, Dj Marky y más. Ganador premio PULSE 2008. Embajador @kayaunite, residente @casaconejo.cl y fundador de Caja de Ritmos Records</p>
       </div>
        <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Meltman_image.png" alt="Meltman" class="w-full h-64 object-cover mb-4 rounded-md" />
+        <img src="Metlman_image.png" alt="Meltman" class="w-full h-64 object-cover mb-4 rounded-md" />
         <h3 class="text-xl font-semibold">Meltman</h3>
         <p class="text-sm text-gray-300">Cristian Reyes aka Meltman, DJ chileno radicado en España, comienza desde 2017, fusiona deep, liquid y jungle en sus sets. Crea atmósferas únicas, mezclando sonidos alegres y oscuros en un viaje musical diverso y envolvente.</p>
       </div>
