--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Step Up – Drum & Bass Crew</title>
+  <title> Step Up Crew – Santiago de Chile · Drum & Bass Movement</title>
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -206,9 +206,12 @@
   <section id="gallery" class="py-20 px-6 bg-glass">
     <h2 class="text-4xl font-bold mb-12 text-center glow">GALLERY</h2>
     <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-      <img src="1 image gallery.png" class="rounded-lg hover:scale-105 transition" alt="Galería 1" />
-      <img src="2 image gallery.png" class="rounded-lg hover:scale-105 transition" alt="Galería 2" />
-      <img src="3 image gallery.png" class="rounded-lg hover:scale-105 transition" alt="Galería 3" />
+      <img src="Gallery1.jpeg" class="rounded-lg hover:scale-105 transition" alt="Galería 1" />
+      <img src="Gallery2.jpeg" class="rounded-lg hover:scale-105 transition" alt="Galería 2" />
+      <img src="Gallery3.jpeg" class="rounded-lg hover:scale-105 transition" alt="Galería 3" />
+      <img src="Gallery4.jpeg" class="rounded-lg hover:scale-105 transition" alt="Galería 4" />
+      <img src="Gallery5.jpeg" class="rounded-lg hover:scale-105 transition" alt="Galería 5" />
+      <img src="Gallery6.jpeg" class="rounded-lg hover:scale-105 transition" alt="Galería 6" />
     </div>
   </section>
 
