--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
   <!-- Events -->
   <section id="events" class="py-20 px-6 bg-glass">
     <h2 class="text-4xl font-bold mb-12 text-center glow">EVENTS</h2>
+    <img src="EVENTS_DISCLAIMER.png" alt="Disclaimer" class="w-full h-64 object-cover mb-4 rounded-md" />
     <div class="max-w-4xl mx-auto space-y-6">
       <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
         <h3 class="text-xl font-bold text-white mb-1">Step Up Launch Rave</h3>
