--- a/index.html
+++ b/index.html
@@ -130,22 +130,28 @@
   </section>
 
   <!-- Events -->
-  <section id="events" class="py-20 px-6 bg-glass">
-    <h2 class="text-4xl font-bold mb-12 text-center glow">EVENTS</h2>
-    <img src="EVENTS_DISCLAIMER.png" alt="Disclaimer" class="w-full h-64 object-cover mb-4 rounded-md" />
-    <div class="max-w-4xl mx-auto space-y-6">
-      <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-        <h3 class="text-xl font-bold text-white mb-1">Step Up Launch Rave</h3>
-        <p class="text-sm text-gray-300">15 Julio 2025 · Club Subterráneo · Santiago</p>
-        <p class="text-sm text-gray-400 mt-2">Line-up: Junglesoul, Cherry, Lil Jahn</p>
-      </div>
-      <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-        <h3 class="text-xl font-bold text-white mb-1">Breakbeats al Atardecer</h3>
-        <p class="text-sm text-gray-300">29 Julio 2025 · Rooftop Los Leones</p>
-        <p class="text-sm text-gray-400 mt-2">Line-up: Invitados especiales + crew Step Up</p>
-      </div>
+<section id="events" class="py-20 px-6 bg-glass">
+  <h2 class="text-4xl font-bold mb-12 text-center glow">EVENTS</h2>
+
+  <!-- Centered image at natural size -->
+  <div class="flex justify-center mb-12">
+    <img src="EVENTS_DISCLAIMER.png" alt="Disclaimer" class="w-full max-w-3xl rounded-md shadow-lg" />
+  </div>
+
+  <div class="max-w-4xl mx-auto space-y-6">
+    <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
+      <h3 class="text-xl font-bold text-white mb-1">Step Up Launch Rave</h3>
+      <p class="text-sm text-gray-300">15 Julio 2025 · Club Subterráneo · Santiago</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Junglesoul, Cherry, Lil Jahn</p>
     </div>
-  </section>
+    <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
+      <h3 class="text-xl font-bold text-white mb-1">Breakbeats al Atardecer</h3>
+      <p class="text-sm text-gray-300">29 Julio 2025 · Rooftop Los Leones</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Invitados especiales + crew Step Up</p>
+    </div>
+  </div>
+</section>
+
 
 <!-- Podcasts -->
 <section id="podcasts" class="py-20 px-6 bg-glass">
