--- a/index.html
+++ b/index.html
@@ -138,17 +138,24 @@
     <img src="EVENTS_DISCLAIMER.png" alt="Disclaimer" class="w-full max-w-3xl rounded-md shadow-lg" />
   </div>
 
-  <div class="max-w-4xl mx-auto space-y-6">
-    <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-      <h3 class="text-xl font-bold text-white mb-1">Step Up Launch Rave</h3>
-      <p class="text-sm text-gray-300">15 Julio 2025 · Club Subterráneo · Santiago</p>
-      <p class="text-sm text-gray-400 mt-2">Line-up: Junglesoul, Cherry, Lil Jahn</p>
+ <div class="max-w-4xl mx-auto space-y-6">
+  <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
+    
+    <!-- Image (9:16 format) -->
+    <img src="So_Liquid1.jpg" alt="So Liquid Poster" class="w-full max-w-xs mx-auto mb-4 rounded-lg shadow" />
+
+    <h3 class="text-xl font-bold text-white mb-1">Lanzamiento So Liquid</h3>
+    <p class="text-sm text-gray-300">12 Julio 2025 · Club Garrison · Santiago</p>
+    <p class="text-sm text-gray-400 mt-2">Line-up: Fat Pablo, Roach, Bristol, Frantik, Drumblack, MC William C</p>
+
+    <!-- CTA Button -->
+    <div class="mt-4 text-center">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe2hjpz6NMtvSfzEdQ7M8V2AplANKzok10iIhrA0pQMUSjKwg/viewform?fbclid=PAQ0xDSwLRKDlleHRuA2FlbQIxMAABp9kwmUhpcv65v1M87HE4o00GgHrR5JEAL1ctW0-ucCefv5XGyhiYDZf1nLxw_aem_AyphZw6opZbfL83E8rHxxw" target="_blank" class="btn btn-outline">Inscribete gratis !</a>
     </div>
-    <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-      <h3 class="text-xl font-bold text-white mb-1">Breakbeats al Atardecer</h3>
-      <p class="text-sm text-gray-300">29 Julio 2025 · Rooftop Los Leones</p>
-      <p class="text-sm text-gray-400 mt-2">Line-up: Invitados especiales + crew Step Up</p>
-    </div>
+    
+  </div>
+</div>
+
   </div>
 </section>
 
