--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <div class="border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
     
     <!-- Image (9:16 format) -->
-    <img src="So_Liquid1.jpg" alt="So Liquid Poster" class="w-full max-w-xs mx-auto mb-4 rounded-lg shadow" />
+    <img src="So_Liquid1.JPG" alt="So Liquid Poster" class="w-full max-w-xs mx-auto mb-4 rounded-lg shadow" />
 
     <h3 class="text-xl font-bold text-white mb-1">Lanzamiento So Liquid</h3>
     <p class="text-sm text-gray-300">12 Julio 2025 · Club Garrison · Santiago</p>
