--- a/index.html
+++ b/index.html
@@ -152,7 +152,20 @@
     <div class="mt-4 text-center">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSe2hjpz6NMtvSfzEdQ7M8V2AplANKzok10iIhrA0pQMUSjKwg/viewform?fbclid=PAQ0xDSwLRKDlleHRuA2FlbQIxMAABp9kwmUhpcv65v1M87HE4o00GgHrR5JEAL1ctW0-ucCefv5XGyhiYDZf1nLxw_aem_AyphZw6opZbfL83E8rHxxw" target="_blank" class="btn btn-outline">Inscribete gratis !</a>
     </div>
+
+     
     
+    <!-- Image (9:16 format) -->
+    <img src="BA023.JPEG" alt="Bajo Attacke 023" class="w-full max-w-xs mx-auto mb-4 rounded-lg shadow" />
+
+    <h3 class="text-xl font-bold text-white mb-1">Bajo Attacke 023</h3>
+    <p class="text-sm text-gray-300">19 Julio 2025 · Smiles Bar · Valparaiso</p>
+    <p class="text-sm text-gray-400 mt-2">Line-up: Dani Mach, Robo aka Nicky L, Muribis, Cherry Punch, Stomp, Espiral, Vagrant. Hosted by: MC Paratrooper, Pangikuru, Ojos y Boca, Nachoco. Visuals by: Atomico.</p>
+
+    <!-- CTA Button -->
+    <div class="mt-4 text-center">
+      <a href="https://www.instagram.com/bajo.attacke/" target="_blank" class="btn btn-outline"> Tickets acá : Preventa 2 x 5.000 / Puerta 5.000 </a>
+    </div>
   </div>
 </div>
 
