--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
      
     
     <!-- Image (9:16 format) -->
-    <img src="BA023.JPEG" alt="Bajo Attacke 023" class="w-full max-w-xs mx-auto mb-4 rounded-lg shadow" />
+    <img src="BA023.jpeg" alt="Bajo Attacke 023" class="w-full max-w-xs mx-auto mb-4 rounded-lg shadow" />
 
     <h3 class="text-xl font-bold text-white mb-1">Bajo Attacke 023</h3>
     <p class="text-sm text-gray-300">19 Julio 2025 · Smiles Bar · Valparaiso</p>
