--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
         <img src="BassBrain_image.png" alt="Bass Brain" class="w-full h-64 object-cover mb-4 rounded-md" />
         <h3 class="text-xl font-semibold">Bass Brain</h3>
-        <p class="text-sm text-gray-300">Claudio Vera aka Bass Brain DJ/productor chileno de Concepción. +18 años de experiencia. Especialista en Drum & Bass, Jungle y Neurofunk (170+ BPM). Fundador de HYBRID BASS y grandes raves en el sur de Chile</p>
+        <p class="text-sm text-gray-300">Claudio Vera aka BASS BRAIN Dj/Productor chileno de Concepción, +20 años de experiencia, especialista en Drum & BASS, Ragga Jungle y NeuroFunk (+170 bpms), fundador de ConceCityDNB e Hybrid Fest.</p>
       </div>
       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
         <img src="Ortokore_image.png" alt="Ortokore" class="w-full h-64 object-cover mb-4 rounded-md" />
@@ -162,7 +162,17 @@
         <a href="https://www.instagram.com/bajo.attacke/" target="_blank" class="btn btn-outline">Tickets acá> Preventa 2 x 5.000 / Puerta 5.000</a>
       </div>
     </div>
-
+    
+<!-- Event Card 3 -->
+    <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
+      <img src="HOAX01.png" alt="HOAX 01" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
+      <h3 class="text-xl font-bold text-white mb-1">Hoax 001</h3>
+      <p class="text-sm text-gray-300">1 Agosto 2025 · Alma de Deejay · Santiago</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Nire, Outloop, Kasyade, imbn.</p>
+      <div class="mt-auto pt-4 text-center">
+        <a href="https://hoax.evently.cl/HOAX-001" target="_blank" class="btn btn-outline">Tickets acá : 4.000 - Promo 2 x 6.000</a>
+      </div>
+    </div>
   </div>
 </section>
 
