--- a/index.html
+++ b/index.html
@@ -182,6 +182,18 @@
         <a href="https://hoax.evently.cl/HOAX-001" target="_blank" class="btn btn-outline">Tickets acá : 4.000 - Promo 2 x 6.000</a>
       </div>
     </div>
+
+    <!-- Event Card 4 -->
+    <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
+      <img src="TF1907.png" alt="TF1907" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
+      <h3 class="text-xl font-bold text-white mb-1">Trigga Fingaz 19/07</h3>
+      <p class="text-sm text-gray-300">19 Julio 2025 · Club Room · Santiago</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Erco (ARG), Inguerzon, Stattik, Ciland, Nire. Hosted by: MC William C</p>
+      <div class="mt-auto pt-4 text-center">
+        <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-19-julio" target="_blank" class="btn btn-outline">Tickets acá</a>
+      </div>
+    </div>
+    
   </div>
 </section>
 
