--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@
         <a href="https://hoax.evently.cl/HOAX-001" target="_blank" class="btn btn-outline">Tickets acá : 4.000 - Promo 2 x 6.000</a>
       </div>
     </div>
-    
+<!-- Event Card 3 -->
+    <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
+      <img src="TF0208.png" alt="TF 0208" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
+      <h3 class="text-xl font-bold text-white mb-1">Trigga Fingaz</h3>
+      <p class="text-sm text-gray-300">2 Agosto 2025 · Club Room · Santiago</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Inguerzon (Bday extended set), Fat Pablo. Hosted by MC William C</p>
+      <div class="mt-auto pt-4 text-center">
+        <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-02-agosto" target="_blank" class="btn btn-outline">Tickets acá</a>
+      </div>
+    </div>    
   </div>
 </section>
 
