--- a/index.html
+++ b/index.html
@@ -170,6 +170,25 @@
         <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-02-agosto" target="_blank" class="btn btn-outline">Tickets acá</a>
       </div>
     </div>    
+    <!-- Event Card 3 -->
+    <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
+      <img src="BRISTOL08.png" alt="BRISTOL08" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
+      <h3 class="text-xl font-bold text-white mb-1">Aniversario 8 Bristol Muziq</h3>
+      <p class="text-sm text-gray-300">9 Agosto 2025 · Garrison Bar · Santiago</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Delphie, Vegaans, Hitch 93, Polly B2B Michi, Eban Krocher, Andy Wave, Bristol, Paul V, Gonzalo Valenzuela. Visuals  by Cubic.</p>
+      <div class="mt-auto pt-4 text-center">
+        <a href="https://forms.gle/BPigwhYZ1KyfgHxA7" target="_blank" class="btn btn-outline">Inscribete gratis acá</a>
+      </div>
+    </div>    
+    <!-- Event Card 3 -->
+    <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
+      <img src="BA024.png" alt="BA024" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
+      <h3 class="text-xl font-bold text-white mb-1">Bajo Attacke 024</h3>
+      <p class="text-sm text-gray-300">9 Agosto 2025 · Secret Spot · Santiago</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Dani Mach Vs Muribis, Cherry Punch Vs Kasyade, Stomp Vs Vagrant, Espiral Vs Robimess, Jota Vs Dirty Da Silva, Zaulo Vs Kapza, Bobby R Vs Kraise. Hosted by Paratrooper, Nachoko, Killaking.</p>
+      <div class="mt-auto pt-4 text-center"><a href="https://www.instagram.com/bajo.attacke/" target="_blank" class="btn btn-outline">Tickets acá</a>
+      </div>
+    </div>     
   </div>
 </section>
 
