--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>    
     <!-- Event Card 3 -->
     <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-      <img src="BRISTOL08.png" alt="BRISTOL08" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
+      <img src="BRISTOL08.jpeg" alt="BRISTOL08" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
       <h3 class="text-xl font-bold text-white mb-1">Aniversario 8 Bristol Muziq</h3>
       <p class="text-sm text-gray-300">9 Agosto 2025 · Garrison Bar · Santiago</p>
       <p class="text-sm text-gray-400 mt-2">Line-up: Delphie, Vegaans, Hitch 93, Polly B2B Michi, Eban Krocher, Andy Wave, Bristol, Paul V, Gonzalo Valenzuela. Visuals  by Cubic.</p>
