--- a/index.html
+++ b/index.html
@@ -152,43 +152,24 @@
     
 <!-- Event Card 3 -->
     <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-      <img src="HOAX01.png" alt="HOAX 01" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
-      <h3 class="text-xl font-bold text-white mb-1">Hoax 001</h3>
-      <p class="text-sm text-gray-300">1 Agosto 2025 · Alma de Deejay · Santiago</p>
-      <p class="text-sm text-gray-400 mt-2">Line-up: Nire, Outloop, Kasyade, imbn.</p>
+      <img src="SL02.png" alt="So Liquid 02" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
+      <h3 class="text-xl font-bold text-white mb-1">So Liquid 02</h3>
+      <p class="text-sm text-gray-300">6 Septiembre 2025 · Garrison Bar · Santiago</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Fat Pablo vs Roach, Pi, Bristol, Drumblack. Hosted by: William C. Visuals by: Cubic.</p>
       <div class="mt-auto pt-4 text-center">
-        <a href="https://hoax.evently.cl/HOAX-001" target="_blank" class="btn btn-outline">Tickets acá : 4.000 - Promo 2 x 6.000</a>
+        <a href="https://www.passline.com/eventos/so-liquid-02?fbclid=PAZXh0bgNhZW0CMTEAAafwKCyF5ciYeEbuQi95uHRhD74gSPA63fZTIkgYWSzVNX_dYk6yiOC15gBcaQ_aem_YwY8ETuXMlfu4qFpyIgW4Q" target="_blank" class="btn btn-outline">Tickets acá</a>
       </div>
     </div>
 <!-- Event Card 3 -->
     <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-      <img src="TF0208.png" alt="TF 0208" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
+      <img src="TF2308.jpg" alt="TF 0208" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
       <h3 class="text-xl font-bold text-white mb-1">Trigga Fingaz</h3>
-      <p class="text-sm text-gray-300">2 Agosto 2025 · Club Room · Santiago</p>
-      <p class="text-sm text-gray-400 mt-2">Line-up: Inguerzon (Bday extended set), Fat Pablo. Hosted by MC William C</p>
+      <p class="text-sm text-gray-300">23 Agosto 2025 · Club Room · Santiago</p>
+      <p class="text-sm text-gray-400 mt-2">Line-up: Inguerzon, Triggered, Stomp, Zaulo, Luca Syn & GDS (ESP). Hosted by MC William C</p>
       <div class="mt-auto pt-4 text-center">
-        <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-02-agosto" target="_blank" class="btn btn-outline">Tickets acá</a>
+        <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-luca-syn-gds-sabado-23-agosto" target="_blank" class="btn btn-outline">Tickets acá</a>
       </div>
     </div>    
-    <!-- Event Card 3 -->
-    <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-      <img src="BRISTOL08.jpeg" alt="BRISTOL08" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
-      <h3 class="text-xl font-bold text-white mb-1">Aniversario 8 Bristol Muziq</h3>
-      <p class="text-sm text-gray-300">9 Agosto 2025 · Garrison Bar · Santiago</p>
-      <p class="text-sm text-gray-400 mt-2">Line-up: Delphie, Vegaans, Hitch 93, Polly B2B Michi, Eban Krocher, Andy Wave, Bristol, Paul V, Gonzalo Valenzuela. Visuals  by Cubic.</p>
-      <div class="mt-auto pt-4 text-center">
-        <a href="https://forms.gle/BPigwhYZ1KyfgHxA7" target="_blank" class="btn btn-outline">Inscribete gratis acá</a>
-      </div>
-    </div>    
-    <!-- Event Card 3 -->
-    <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-      <img src="BA024.png" alt="BA024" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
-      <h3 class="text-xl font-bold text-white mb-1">Bajo Attacke 024</h3>
-      <p class="text-sm text-gray-300">9 Agosto 2025 · Secret Spot · Santiago</p>
-      <p class="text-sm text-gray-400 mt-2">Line-up: Dani Mach Vs Muribis, Cherry Punch Vs Kasyade, Stomp Vs Vagrant, Espiral Vs Robimess, Jota Vs Dirty Da Silva, Zaulo Vs Kapza, Bobby R Vs Kraise. Hosted by Paratrooper, Nachoko, Killaking.</p>
-      <div class="mt-auto pt-4 text-center"><a href="https://www.instagram.com/bajo.attacke/" target="_blank" class="btn btn-outline">Tickets acá</a>
-      </div>
-    </div>     
   </div>
 </section>
 
@@ -340,3 +321,4 @@
   
 </body>
 </html>
+
