--- a/13Sept.html
+++ b/13Sept.html
@@ -220,7 +220,7 @@
 
  <script>
 async function sendTest() {
-  const response = await fetch("https://YOUR-VERCEL-APP.vercel.app/api/send-email", {
+  const response = await fetch("https://step-up-eight.vercel.app/api/send-email", {
     method: "POST"
   });
   const result = await response.json();
